# proxytorrent

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Makefile  QUICKSTART.md  README.md  SECURITY.md  config.py  docker-compose.yml  example_client.py  fetcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  server.py  test_integration.py  test_unit.py  torrent_manager.py
.github/workflows/: ci.yml  deploy-site.yml
docs/handbook/: 01_project_mission.md  02_goals_tasks_results.md  03_architecture_overview.md  04_request_lifecycle.md  05_api_reference.md  06_configuration_reference.md  07_storage_and_data_model.md  08_security_model.md  09_deployment_playbook.md  10_testing_and_ci.md  11_known_limits_and_roadmap.md  12_changelog_results_by_pr.md  README.md
examples/: README.md  client.py  curl_example.sh
site/: README.md  index.html
site/ar/: index.html
site/assets/: style.css
site/en/: index.html
site/ru/: index.html
site/zh/: index.html
src/app/: main.py
src/app/api/: __init__.py  auth.py  health.py  ratelimit.py  requests.py
src/app/core/: __init__.py  config.py  database.py
src/app/models/: __init__.py  database.py  schemas.py
src/app/services/: __init__.py  fetcher.py  packager.py  seeder.py
src/app/tasks/: __init__.py  queue.py
src/app/tests/: conftest.py  test_api.py  test_fetcher.py  test_integration.py
